# MCP

./: .gitignore  README.md  test-servers.sh
.github/: copilot-instructions.md
docs/: MIGRATION_SUMMARY.md  PROJECT_STRUCTURE.md  REORGANIZATION_SUMMARY.md
python-server/: MYSQL_TOOL.md  PYTHON_SERVER.md  README.md  SQLITE_TOOL.md  demo.db  pyproject.toml  requirements.txt  setup.py  test.db  test_server.py  test_sqlite.py
python-server/src/: __init__.py  server.py
typescript-server/: README.md  package-lock.json  package.json
typescript-server/src/: index.ts
